@@ -81,6 +81,7 @@ Template for new versions:
 
 ## Fixes
 - `combine`: prevent stack sizes from growing beyond quantities that you would normally see in vanilla gameplay
+- `gui/design`: Center dragging shapes now track the mouse correctly
 
 ## Misc Improvements
 - `caravan`: enable searching within containers in trade screen when in "trade bin with contents" mode
